-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9
-
Component/s: hotspot
-
b137
-
Not verified
hotspot/src/share/vm/oops/instanceKlass.hpp:775), pid=15124, tid=15183
assert(_previous_version_count >= 0) failed: count should never be negative
Current thread (0xb37f0800): VMThread "VM Thread" [stack: 0xb3233000,0xb32b4000] [id=15183]
Stack: [0xb3233000,0xb32b4000], sp=0xb32b2870, free space=510k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x14b7547] VMError::report_and_die(int, char const*, char const*, char*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned int)+0x137
V [libjvm.so+0x14b8240] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, char*)+0x30
V [libjvm.so+0x936e40] report_vm_error(char const*, int, char const*, char const*, ...)+0x60
V [libjvm.so+0x817c0a] ClassLoaderDataGraph::do_unloading(BoolObjectClosure*, bool)+0x56a
V [libjvm.so+0x13c3ab2] SystemDictionary::do_unloading(BoolObjectClosure*, bool)+0x22
V [libjvm.so+0xaffdce] G1MarkSweep::mark_sweep_phase1(bool&, bool)+0x25e
V [libjvm.so+0xb02a90] G1MarkSweep::invoke_at_safepoint(ReferenceProcessor*, bool)+0x150
V [libjvm.so+0xac1c1f] G1CollectedHeap::do_full_collection(bool, bool)+0x59f
V [libjvm.so+0xac2757] G1CollectedHeap::do_full_collection(bool)+0x17
V [libjvm.so+0x14fda39] VM_G1CollectFull::doit()+0x99
V [libjvm.so+0x14fb28a] VM_Operation::evaluate()+0x9a
V [libjvm.so+0x14f5689] VMThread::evaluate_operation(VM_Operation*)+0x169
V [libjvm.so+0x14f61d0] VMThread::loop()+0x260
V [libjvm.so+0x14f68ad] VMThread::run()+0xcd
V [libjvm.so+0x1183a24] thread_native_entry(Thread*)+0x124
C [libpthread.so.0+0x6b5a] start_thread+0xca
VM_Operation (0xab932c9c): G1CollectFull, mode: safepoint, requested by thread 0xae51fc00
assert(_previous_version_count >= 0) failed: count should never be negative
Current thread (0xb37f0800): VMThread "VM Thread" [stack: 0xb3233000,0xb32b4000] [id=15183]
Stack: [0xb3233000,0xb32b4000], sp=0xb32b2870, free space=510k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x14b7547] VMError::report_and_die(int, char const*, char const*, char*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned int)+0x137
V [libjvm.so+0x14b8240] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, char*)+0x30
V [libjvm.so+0x936e40] report_vm_error(char const*, int, char const*, char const*, ...)+0x60
V [libjvm.so+0x817c0a] ClassLoaderDataGraph::do_unloading(BoolObjectClosure*, bool)+0x56a
V [libjvm.so+0x13c3ab2] SystemDictionary::do_unloading(BoolObjectClosure*, bool)+0x22
V [libjvm.so+0xaffdce] G1MarkSweep::mark_sweep_phase1(bool&, bool)+0x25e
V [libjvm.so+0xb02a90] G1MarkSweep::invoke_at_safepoint(ReferenceProcessor*, bool)+0x150
V [libjvm.so+0xac1c1f] G1CollectedHeap::do_full_collection(bool, bool)+0x59f
V [libjvm.so+0xac2757] G1CollectedHeap::do_full_collection(bool)+0x17
V [libjvm.so+0x14fda39] VM_G1CollectFull::doit()+0x99
V [libjvm.so+0x14fb28a] VM_Operation::evaluate()+0x9a
V [libjvm.so+0x14f5689] VMThread::evaluate_operation(VM_Operation*)+0x169
V [libjvm.so+0x14f61d0] VMThread::loop()+0x260
V [libjvm.so+0x14f68ad] VMThread::run()+0xcd
V [libjvm.so+0x1183a24] thread_native_entry(Thread*)+0x124
C [libpthread.so.0+0x6b5a] start_thread+0xca
VM_Operation (0xab932c9c): G1CollectFull, mode: safepoint, requested by thread 0xae51fc00
- relates to
-
JDK-8164692 InstanceKlass::_previous_version_count goes negative
-
- Closed
-