8165246: [REDO] InstanceKlass::_previous_version_count goes negative

Make _has_previous_version a boolean that is set to true when previous version of a class is added or during class unloading call to purge_previous_versions

Reviewed-by: gtriantafill, dcubed, sspitsyn